<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/pref_key_user_settings"
        android:title="@string/pref_title_user_settings">
        <Preference android:key="@string/pref_key_user_info" />
        <EditTextPreference
            android:defaultValue="0"
            android:inputType="number"
            android:key="@string/pref_key_user_vip"
            android:summary="@string/pref_summary_user_vip"
            android:title="@string/pref_title_user_vip" />
        <Preference
            android:key="@string/pref_key_user_logout"
            android:summary="@string/pref_summary_user_logout"
            android:title="@string/pref_title_user_logout" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_key_safe_settings"
        android:title="@string/pref_title_safe_settings">
        <SwitchPreference
            android:key="@string/pref_key_safe_switch"
            android:title="@string/pref_title_safe_switch" />
        <PreferenceScreen
            android:key="@string/pref_key_safe_update"
            android:title="@string/pref_title_safe_gesture">
            <ListPreference
                android:entries="@array/pref_entries_safe_level"
                android:entryValues="@array/pref_entryValues_safe_level"
                android:key="@string/pref_key_safe_level"
                android:summary="@string/pref_summary_safe_level"
                android:title="@string/pref_title_safe_level" />
            <Preference android:title="@string/pref_title_safe_update">
                <intent android:action="@string/pref_action_safe_update" />
            </Preference>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_key_net_settings"
        android:title="@string/pref_title_net_settings">
        <SwitchPreference
            android:key="@string/pref_key_net_offline"
            android:summary="@string/pref_summary_net_offline"
            android:title="@string/pref_title_net_offline" />
        <PreferenceScreen
            android:key="@string/pref_key_net_flow"
            android:title="@string/pref_title_net_flow">
            <Preference android:key="@string/pref_key_net_flow_info" />
            <MultiSelectListPreference
                android:entries="@array/pref_entries_net_flow"
                android:entryValues="@array/pref_entryValues_net_flow"
                android:key="@string/pref_key_net_flow_change"
                android:title="@string/pref_title_net_flow_change" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_key_notify_settings"
        android:title="@string/pref_title_notify_settings">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_notify_switch"
            android:title="@string/pref_title_notify_switch" />
        <RingtonePreference
            android:key="@string/pref_key_notify_ring"
            android:title="@string/pref_title_notify_ring" />
    </PreferenceCategory>
</PreferenceScreen>