<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_content_title"
    android:background="@color/bgContent"
    android:baselineAligned="false"
    tools:showIn="@layout/cell_title_layout">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/layout_time"
        android:baselineAligned="false">

        <!--name-->
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bgName">

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="@dimen/margin_half"
                android:paddingStart="@dimen/margin_half"
                android:text="@string/name"
                android:textColor="@color/text_color_name"
                android:textSize="@dimen/text_size_name" />

        </ScrollView>

        <!--message-->
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <TextView
                android:id="@+id/text_view_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:paddingEnd="@dimen/margin_half"
                android:paddingStart="@dimen/margin_half"
                android:text="@string/message"
                android:textColor="@color/text_color_message"
                android:textSize="@dimen/text_size_message" />

            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--tools:ignore="ContentDescription" />-->
        </ScrollView>
    </LinearLayout>

    <!--time-->
    <LinearLayout
        android:id="@+id/layout_time"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:background="@color/bgName"
        android:padding="@dimen/margin_half">

        <TextView
            android:id="@+id/text_view_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/time"
            android:textColor="@color/text_color_time"
            android:textSize="@dimen/text_size_time" />
    </LinearLayout>

</RelativeLayout>

